# verification-cosmos-mongo

./: .gitignore  README.md  config.example.yaml  cosmos_mongo_compare.py  pyproject.toml  requirements-cosmos-sql.txt  requirements.txt  troubleshoot.md
configs/: nlp-member-kafka.yaml  nlp-member-pco.yaml  nlp-member.yaml  nlp-pharmacy-member.yaml
cosmos_mongo_compare/: __init__.py  __main__.py  compare.py  config.py  logging_utils.py  orchestrator.py  reporting.py  sampling.py  serialization.py
cosmos_mongo_compare/clients/: __init__.py  base.py  cosmos_mongo.py  cosmos_sql.py  mongo_client_factory.py  mongo_target.py
indexes/: create_nlp_indexes.mongosh.js  create_nlp_indexes_copy_paste.mongosh.js  index.cw-milan.md  index.fer.md  index.md
scripts/: diag_tcp.py  diag_tls.py
tests/: test_compare.py  test_config.py  test_mongo_client_factory.py  test_sampling.py
